--- a/spring-petclinic-web/src/main/resources/templates/owners/ownerDetails.html
+++ b/spring-petclinic-web/src/main/resources/templates/owners/ownerDetails.html
@@ -59,7 +59,7 @@
             </tr>
           </thead>
           <tr th:each="visit : ${visitMap.get(pet.id)}">
-            <td th:text="${{visit.date}}"></td>
+            <td th:text="${{visit.visitDate}}"></td>
             <td th:text="${visit?.description}"></td>
           </tr>
           <tr>
